src/golden/unittests/typeerrors/test.golden/shove.ut
	test shove cannot assign a number to a string
		data Support card
		shove card.x
			42